--- a/src/main/resources/templates/bloggerview.mustache
+++ b/src/main/resources/templates/bloggerview.mustache
@@ -61,7 +61,7 @@
             <th scope="col">Post ID</th>
             <th scope="col">User</th>
             <th scope="col">Email</th>
-            <th scope="col">Datel</th>
+            <th scope="col">Date</th>
             <th scope="col">Manage</th>
         </tr>
         </thead>
@@ -72,6 +72,7 @@
                 <td>{{commenttext}}</td>
                 <td>{{post.title}}</td>
                 <td>{{post.p_id}}</td>
+                <td>{{createdComment}}</td>
                 <td>{{user.email}}</td>
                 <td><a href="/admin/comment/delete/{{b_id}}">Delete</a> </td>
             </tr>
